[DATAPIPE-2319] Added post route for schema alias
