# api_docs/swagger.json
@@ -565,6 +565,23 @@
             ],
             "type": "object"
         },
+        "RegisterSchemaAliasRequest": {
+            "properties": {
+                "schema_id": {
+                    "description": "The original schema ID",
+                    "type": "integer"
+                },
+                "alias": {
+                    "description": "The name of the alias you want to associate with the schema",
+                    "type": "string"
+                }
+            },
+            "required": [
+                "schema_id",
+                "alias"
+            ],
+            "type": "object"
+        },
         "Schema": {
             "properties": {
                 "base_schema_id": {
@@ -2176,6 +2193,51 @@
                 "summary": "Get the schema of specified schema id.",
                 "tags": [
                     "schemas"
+                ]
+            }
+        },
+        "/v1/schemas/{schema_id}/aliases": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "description": "",
+                "operationId": "register_schema_alias",
+                "parameters": [
+                    {
+                        "description": "ID of schema to register alias with",
+                        "in": "path",
+                        "name": "schema_id",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/RegisterSchemaAliasRequest"
+                        }
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "404": {
+                        "description": "Invalid request, schema id doesn't exist"
+                    },
+                    "422": {
+                        "description": "Alias already registered to another schema id with same namespace and source"
+                    }
+                },
+                "summary": "Register an alias to an existing schema.",
+                "tags": [
+                    "schemas",
+                    "alias"
                 ]
             }
         },
